--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <iframe id="snapFrame"
-    src="https://snap.berkeley.edu/snap/snap.html#present:Username=ELTEUUSUARI&ProjectName=ELTEUPROJECTE&editMode=false&noRun">
+    src="https://snap.berkeley.edu/project?username=isanch45&projectname=Poligons%20FETS&editMode=false&noRun">
   </iframe>
 
   <script>
